added build script and index.html

--- a/tutorial/part1.html
+++ b/tutorial/part1.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<head><title>part 1</title></head>
+<style>
+  body {
+    width: 585px;
+    font-family: Arial;
+    font-size: 0.875em;
+    line-height: 1.286em;
+  }
+  h1 {
+    line-height: 2.086em;
+  }
+  h1 {
+    line-height: 1.286em;
+  }
+</style>
+<body>
+
 <h1>Poutine Maker: An Introduction to the Field API in Drupal 7</h1>
 
 <p>The power of Drupal stems from its willingness to be customized. In a recent project, we needed a way to provide complex fields with custom widgets and formatters unavailable in core or contributed modules. Drupal 7's Field API, however, provides the hooks needed to make just about any field we wanted.</p>
