added part 1 to index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Poutine Maker, an Example Drupal 7 Module Demonstrating the Field API</h1>
 
 <p>This is an example module created for a blog post which has not been posted yet.</p>
+
+<p><a href="http://tarmstrong.github.com/poutine_maker/tutorial/part1.html">Part 1</a></p>
