--- a/tutorial/part1.html
+++ b/tutorial/part1.html
@@ -113,7 +113,7 @@ You can define many custom fields in a single <code>hook_field_info()</code> dec
 <p>There are three important things to notice about this screenshot:</p>
 
 <ol>
-<li>The entire field ("Poutine Maker With Meat") is required, but only the "name" sub-element is required. I will explain how this works in a bit.</li>
+<li>The entire field ("Poutine Maker With Meat") is required, but only the "name" sub-element is required. I will explain how this works in a bit. In additon, note that the 'name' is only required in the first poutine item. This is Drupal 7's default behaviour.</li>
 <li>The second poutine-item doesn't have a "Meat" fieldset. This is done with <a href="http://api.drupal.org/api/drupal/developer--topics--forms_api_reference.html/7#states">#states</a>. I will cover #states in the next part of this tutorial.</li>
 <li>There are two poutine items! This is done by setting the <em>number of values</em> to "Unlimited" on the field instance settings page. Now this field can store as many poutines in one field as we like.</li>
 </ol>
